syntax = "proto3";
package models;

option go_package = "protocols/meals-pkg";

import "meals-pkg-models.proto";

// OrderService is
service MealsService {
    rpc CreateMeals(models.Meals) returns(MealsEmpty);
    rpc GetMeals(models.Pagination) returns(models.Meals);
    rpc MealByMealUuid(MealGetReq) returns(models.Meal);
    rpc UpdateMeal(UpdateMealReq) returns(models.Meal);
    rpc DeleteMeal(MealDeleteReq) returns(MealsEmpty);

}

message MealDeleteReq {
    bytes meal_uuid = 1;
}
message MealGetReq {
    bytes meal_uuid = 1;
}
message MealsEmpty {}

message UpdateMealReq{
    bytes       meal_uuid                  = 1;
    bytes           meal_settings          = 2;
}
